--- a/P1.md
+++ b/P1.md
@@ -1,1 +1,69 @@
+Pengantar HTML
+HTML adalah bahasa markup standar untuk membuat halaman Web.
+Apa itu HTML?
+•	HTML adalah singkatan dari Hyper Text Markup Language
+•	HTML adalah bahasa markup standar untuk membuat halaman Web
+•	HTML menggambarkan struktur halaman Web
+•	HTML terdiri dari serangkaian elemen
+•	Elemen HTML memberi tahu browser cara menampilkan konten
+•	Elemen HTML memberi label pada bagian konten seperti "ini adalah judul", "ini adalah paragraf", "ini adalah tautan", dan lain-lain.
+
+Dokumen HTML Sederhana
+Contoh
+```
+<!DOCTYPE html>
+<html>
+<head>
+<title>Page Title</title>
+</head>
+<body>
+
+<h1>My First Heading</h1>
+<p>My first paragraph.</p>
+
+</body>
+</html>
+```
+Contoh Dijelaskan
+•	Deklarasi ini <!DOCTYPE html>mendefinisikan bahwa dokumen ini adalah dokumen HTML5
+•	Elemen <html>adalah elemen akar dari halaman HTML
+•	Elemen ini <head>berisi informasi meta tentang halaman HTML
+•	Elemen ini <title>menentukan judul untuk halaman HTML (yang ditampilkan di bilah judul browser atau di tab halaman)
+•	Elemen <body>mendefinisikan badan dokumen, dan merupakan wadah untuk semua konten yang terlihat, seperti judul, paragraf, gambar, hyperlink, tabel, daftar, dll.
+•	Elemen ini <h1>mendefinisikan judul besar
+•	Elemen <p>mendefinisikan sebuah paragraf
+________________________________________
+Apa itu Elemen HTML?
+Elemen HTML didefinisikan oleh tag awal, beberapa konten, dan tag akhir:
+< tagname > Konten ada di sini... < /tagname >
+Elemen HTML adalah segalanya dari tag awal hingga tag akhir:
+< h1 > Judul Pertama Saya < /h1 >
+< p > Paragraf pertama saya. < /p >
+Start tag	Element content	End tag
+<h1>	My First Heading	</h1>
+<p>	My first paragraph.	</p>
+<br>	none	none
+Catatan: Beberapa elemen HTML tidak memiliki konten (seperti elemen <br>). Elemen-elemen ini disebut elemen kosong. Elemen kosong tidak memiliki tag penutup!
+________________________________________
+IKLAN
+________________________________________
+Peramban Web
+Tujuan peramban web (Chrome, Edge, Firefox, Safari) adalah untuk membaca dokumen HTML dan menampilkannya dengan benar.
+Peramban tidak menampilkan tag HTML, tetapi menggunakannya untuk menentukan cara menampilkan dokumen:
+ 
+________________________________________
+Struktur Halaman HTML
+Berikut adalah visualisasi struktur halaman HTML:
+<html>
+<kepala>
+<title>Judul halaman</title>
+</head>
+<tubuh>
+<h1>Ini adalah judul</h1>
+<p>Ini adalah sebuah paragraf.</p>
+<p>Ini adalah paragraf lain.</p>
+</tubuh>
+Bahasa Indonesia: </html>
+Catatan: Konten di dalam bagian <body> akan ditampilkan di peramban. Konten di dalam elemen <title> akan ditampilkan di bilah judul peramban atau di tab halaman.
+
 
