--- a/P1.md
+++ b/P1.md
@@ -1,6 +1,7 @@
-Pengantar HTML
+### Pengantar HTML
 HTML adalah bahasa markup standar untuk membuat halaman Web.
-Apa itu HTML?
+
+# Apa itu HTML?
 •	HTML adalah singkatan dari Hyper Text Markup Language
 •	HTML adalah bahasa markup standar untuk membuat halaman Web
 •	HTML menggambarkan struktur halaman Web
