--- a/P1.md
+++ b/P1.md
@@ -1,15 +1,15 @@
-### Pengantar HTML
+# Pengantar HTML
 HTML adalah bahasa markup standar untuk membuat halaman Web.
 
-# Apa itu HTML?
-•	HTML adalah singkatan dari Hyper Text Markup Language
-•	HTML adalah bahasa markup standar untuk membuat halaman Web
-•	HTML menggambarkan struktur halaman Web
-•	HTML terdiri dari serangkaian elemen
-•	Elemen HTML memberi tahu browser cara menampilkan konten
-•	Elemen HTML memberi label pada bagian konten seperti "ini adalah judul", "ini adalah paragraf", "ini adalah tautan", dan lain-lain.
+### Apa itu HTML?
+- HTML adalah singkatan dari Hyper Text Markup Language
+- HTML adalah bahasa markup standar untuk membuat halaman Web
+- HTML menggambarkan struktur halaman Web
+- HTML terdiri dari serangkaian elemen
+- Elemen HTML memberi tahu browser cara menampilkan konten
+- Elemen HTML memberi label pada bagian konten seperti "ini adalah judul", "ini adalah paragraf", "ini adalah tautan", dan lain-lain.
 
-Dokumen HTML Sederhana
+### Dokumen HTML Sederhana
 Contoh
 ```
 <!DOCTYPE html>
