--- a/P1.md
+++ b/P1.md
@@ -26,45 +26,44 @@ Contoh
 </html>
 ```
 Contoh Dijelaskan
-•	Deklarasi ini <!DOCTYPE html>mendefinisikan bahwa dokumen ini adalah dokumen HTML5
-•	Elemen <html>adalah elemen akar dari halaman HTML
-•	Elemen ini <head>berisi informasi meta tentang halaman HTML
-•	Elemen ini <title>menentukan judul untuk halaman HTML (yang ditampilkan di bilah judul browser atau di tab halaman)
-•	Elemen <body>mendefinisikan badan dokumen, dan merupakan wadah untuk semua konten yang terlihat, seperti judul, paragraf, gambar, hyperlink, tabel, daftar, dll.
-•	Elemen ini <h1>mendefinisikan judul besar
-•	Elemen <p>mendefinisikan sebuah paragraf
-________________________________________
-Apa itu Elemen HTML?
+- Deklarasi ini <!DOCTYPE html>mendefinisikan bahwa dokumen ini adalah dokumen HTML5
+- Elemen <html>adalah elemen akar dari halaman HTML
+- Elemen ini <head>berisi informasi meta tentang halaman HTML
+- Elemen ini <title>menentukan judul untuk halaman HTML (yang ditampilkan di bilah judul browser atau di tab halaman)
+- Elemen <body>mendefinisikan badan dokumen, dan merupakan wadah untuk semua konten yang terlihat, seperti judul, paragraf, gambar, hyperlink, tabel, daftar, dll.
+- Elemen ini <h1>mendefinisikan judul besar
+- Elemen <p> mendefinisikan sebuah paragraf
+
+### Apa itu Elemen HTML?
 Elemen HTML didefinisikan oleh tag awal, beberapa konten, dan tag akhir:
-< tagname > Konten ada di sini... < /tagname >
+```< tagname > Konten ada di sini... < /tagname >```
+
 Elemen HTML adalah segalanya dari tag awal hingga tag akhir:
-< h1 > Judul Pertama Saya < /h1 >
+```< h1 > Judul Pertama Saya < /h1 >
 < p > Paragraf pertama saya. < /p >
 Start tag	Element content	End tag
 <h1>	My First Heading	</h1>
 <p>	My first paragraph.	</p>
 <br>	none	none
+```
 Catatan: Beberapa elemen HTML tidak memiliki konten (seperti elemen <br>). Elemen-elemen ini disebut elemen kosong. Elemen kosong tidak memiliki tag penutup!
-________________________________________
-IKLAN
-________________________________________
-Peramban Web
+
+### Peramban Web
 Tujuan peramban web (Chrome, Edge, Firefox, Safari) adalah untuk membaca dokumen HTML dan menampilkannya dengan benar.
 Peramban tidak menampilkan tag HTML, tetapi menggunakannya untuk menentukan cara menampilkan dokumen:
  
-________________________________________
-Struktur Halaman HTML
+### Struktur Halaman HTML
 Berikut adalah visualisasi struktur halaman HTML:
-<html>
-<kepala>
+```<html>
+<head>
 <title>Judul halaman</title>
 </head>
-<tubuh>
+<body>
 <h1>Ini adalah judul</h1>
 <p>Ini adalah sebuah paragraf.</p>
 <p>Ini adalah paragraf lain.</p>
-</tubuh>
-Bahasa Indonesia: </html>
+</body>
+```
 Catatan: Konten di dalam bagian <body> akan ditampilkan di peramban. Konten di dalam elemen <title> akan ditampilkan di bilah judul peramban atau di tab halaman.
 
 
