--- a/P1.md
+++ b/P1.md
@@ -25,7 +25,7 @@ Contoh
 </body>
 </html>
 ```
-Contoh Dijelaskan
+Penjelasasan
 - Deklarasi ini <!DOCTYPE html>mendefinisikan bahwa dokumen ini adalah dokumen HTML5
 - Elemen <html>adalah elemen akar dari halaman HTML
 - Elemen ini <head>berisi informasi meta tentang halaman HTML
@@ -38,8 +38,9 @@ Contoh Dijelaskan
 Elemen HTML didefinisikan oleh tag awal, beberapa konten, dan tag akhir:
 ```< tagname > Konten ada di sini... < /tagname >```
 
-Elemen HTML adalah segalanya dari tag awal hingga tag akhir:
-```< h1 > Judul Pertama Saya < /h1 >
+### Elemen HTML adalah segalanya dari tag awal hingga tag akhir:
+```
+< h1 > Judul Pertama Saya < /h1 >
 < p > Paragraf pertama saya. < /p >
 Start tag	Element content	End tag
 <h1>	My First Heading	</h1>
