--- a/P1.md
+++ b/P1.md
@@ -29,10 +29,10 @@ Penjelasasan
 - Deklarasi ini <!DOCTYPE html>mendefinisikan bahwa dokumen ini adalah dokumen HTML5
 - Elemen <html>adalah elemen akar dari halaman HTML
 - Elemen ini <head>berisi informasi meta tentang halaman HTML
-- Elemen ini <title>menentukan judul untuk halaman HTML (yang ditampilkan di bilah judul browser atau di tab halaman)
+- Elemen ini <title> menentukan judul untuk halaman HTML (yang ditampilkan di bilah judul browser atau di tab halaman)
 - Elemen <body>mendefinisikan badan dokumen, dan merupakan wadah untuk semua konten yang terlihat, seperti judul, paragraf, gambar, hyperlink, tabel, daftar, dll.
-- Elemen ini <h1>mendefinisikan judul besar
-- Elemen <p> mendefinisikan sebuah paragraf
+- Elemen ini ```<h1>``` mendefinisikan judul besar
+- Elemen ```<p>``` mendefinisikan sebuah paragraf
 
 ### Apa itu Elemen HTML?
 Elemen HTML didefinisikan oleh tag awal, beberapa konten, dan tag akhir:
@@ -55,7 +55,8 @@ Peramban tidak menampilkan tag HTML, tetapi menggunakannya untuk menentukan cara
  
 ### Struktur Halaman HTML
 Berikut adalah visualisasi struktur halaman HTML:
-```<html>
+```
+<html>
 <head>
 <title>Judul halaman</title>
 </head>
