--- a/P1.md
+++ b/P1.md
@@ -38,7 +38,7 @@ Penjelasasan
 Elemen HTML didefinisikan oleh tag awal, beberapa konten, dan tag akhir:
 ```< tagname > Konten ada di sini... < /tagname >```
 
-### Elemen HTML adalah segalanya dari tag awal hingga tag akhir:
+<b> Elemen HTML adalah segalanya dari tag awal hingga tag akhir:
 ```
 < h1 > Judul Pertama Saya < /h1 >
 < p > Paragraf pertama saya. < /p >
@@ -53,19 +53,6 @@ Catatan: Beberapa elemen HTML tidak memiliki konten (seperti elemen <br>). Eleme
 Tujuan peramban web (Chrome, Edge, Firefox, Safari) adalah untuk membaca dokumen HTML dan menampilkannya dengan benar.
 Peramban tidak menampilkan tag HTML, tetapi menggunakannya untuk menentukan cara menampilkan dokumen:
  
-### Struktur Halaman HTML
-Berikut adalah visualisasi struktur halaman HTML:
-```
-<html>
-<head>
-<title>Judul halaman</title>
-</head>
-<body>
-<h1>Ini adalah judul</h1>
-<p>Ini adalah sebuah paragraf.</p>
-<p>Ini adalah paragraf lain.</p>
-</body>
-```
 Catatan: Konten di dalam bagian <body> akan ditampilkan di peramban. Konten di dalam elemen <title> akan ditampilkan di bilah judul peramban atau di tab halaman.
 
 
