--- a/P1.md
+++ b/P1.md
@@ -36,9 +36,10 @@ Penjelasasan
 
 ### Apa itu Elemen HTML?
 Elemen HTML didefinisikan oleh tag awal, beberapa konten, dan tag akhir:
+
 ```< tagname > Konten ada di sini... < /tagname >```
 
-<b> Elemen HTML adalah segalanya dari tag awal hingga tag akhir:
+Elemen HTML adalah segalanya dari tag awal hingga tag akhir:
 ```
 < h1 > Judul Pertama Saya < /h1 >
 < p > Paragraf pertama saya. < /p >
