--- a/P1.md
+++ b/P1.md
@@ -35,7 +35,7 @@ Penjelasasan
 - Elemen ```<p>``` mendefinisikan sebuah paragraf
 
 
-Catatan: Beberapa elemen HTML tidak memiliki konten (seperti elemen <br>). Elemen-elemen ini disebut elemen kosong. Elemen kosong tidak memiliki tag penutup!
+Catatan: Beberapa elemen HTML tidak memiliki konten (seperti elemen ```<br>```). Elemen-elemen ini disebut elemen kosong. Elemen kosong tidak memiliki tag penutup!
 
 ### Peramban Web
 Tujuan peramban web (Chrome, Edge, Firefox, Safari) adalah untuk membaca dokumen HTML dan menampilkannya dengan benar.
